--- a/app/views/spree/wishlists/show.html.erb
+++ b/app/views/spree/wishlists/show.html.erb
@@ -28,7 +28,8 @@
         variant = wish.variant
         product = variant.product %>
     <tr class="<%= cycle('', 'alt') %>">
-    <% if @wishlist.user == spree_current_user %>
+    <!-- TODO: public lists with shared link on it -->
+    <% if @wishlist.is_private? %>
       <td>
         <p><%= link_to Spree.t(:remove_from_wishlist), wish, method: :delete, class: 'btn btn-danger' %></p>
         <%= form_for :order, url: populate_orders_url do |f| %>
@@ -37,7 +38,7 @@
           <%= number_field_tag 'quantity', wish.quantity, size: 3 %>
           <%= link_to Spree.t(:add_to_cart), '#', onclick: '$(this).parent().submit(); return false;', class: 'btn btn-success' %>
         <% end %>
-        <% if spree_current_user.wishlists.count > 1 %>
+        <% if @wishlists&.any? && @wishlist.user == spree_current_user%>
           <%= Spree.t(:move_to_another_wishlist) %>:
           <%= form_for wish do |f| %>
             <%= f.select :wishlist_id, spree_current_user.wishlists.map{|wl| [wl.name, wl.id]} %>
